cursive-bootstrap/tests/ui/E-CON/E-CON-0090.cursive
// RUN: compile-fail
// DIAG: E-CON-0090
// SPEC: 8.9
// DESC: Nested key block inside speculative block

record Counter {
    value: i32
}

procedure nested_in_speculative(c: shared Counter) -> () {
    # speculative write c {
        # write c {  //~ ERROR E-CON-0090: nested key in speculative
            c.value = 10
        }
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
